k8s/12-kafka-cluster.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: nexusops
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/part-of: nexusops-enterprise
spec:
  serviceName: "kafka"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
              name: kafka-port
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: nexusops
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka-port
  selector:
    app: kafka
